[package]
name = "projection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pj"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
fs_extra = "1.3.0"
simple-home-dir = "0.2.3"
